--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,12 +12,11 @@ jobs:
   install_packages:
     executor:
       name: node/default
-      tag: '10.4'
+      version: 16.11.0
     steps:
       - run: npm install
   build:
     executor:
       name: node/default
-      tag: '10.4'
     steps:
       - run: npm run build
