--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,30 @@
-# This config is equivalent to both the '.circleci/extended/orb-free.yml' and the base '.circleci/config.yml'
 version: 2.1
-
-# Orbs are reusable packages of CircleCI configuration that you may share across projects, enabling you to create encapsulated, parameterized commands, jobs, and executors that can be used across multiple projects.
-# See: https://circleci.com/docs/2.0/orb-intro/
 orbs:
   node: circleci/node@4.7
-
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 jobs:
-  build:
-    executor:
-      name: node/default
+  install-node-example:
+    docker:
+      - image: 'cimg/base:stable'
+    steps:
+      - checkout
+      - node/install:
+          install-yarn: true
+      - run: node --version
+  install-packages:
+    docker:
+      - image: 'cimg/base:stable'
     steps:
       - checkout
       - run: npm install
+  build:
+    docker:
+      - image: 'cimg/base:stable'
+    steps:
+      - checkout
       - run: npm run build
+workflows:
+  test_my_app:
+    jobs:
+      - install-node-example
+      - install-packages
+      - build
