--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
           install-yarn: true
       - run: node --version
       - run: npm install
-      - run: npm run build
+      - run: CI=false npm run build
   # install-packages:
   #   docker:
   #     - image: 'cimg/base:stable'
